--- a/booking/package.json
+++ b/booking/package.json
@@ -23,6 +23,7 @@
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-material-ui-carousel": "^3.4.2",
+    "react-notifications-component": "^4.0.1",
     "react-router-dom": "^6.24.1",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
